@@ -13,7 +13,8 @@
     <description>Many books!</description>
 
     <properties>
-        <hibernate-version>5.0.1.Final</hibernate-version>
+        <hibernate-version>4.2.6.Final</hibernate-version>
+        <tomee.version>1.7.4</tomee.version>
     </properties>
 
     <dependencies>
@@ -44,14 +45,14 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.3.5.Final</version>
+            <version>4.2.6.Final</version>
         </dependency>
 
         <!-- for JPA, use hibernate-entitymanager instead of hibernate-core -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>5.3.5.Final</version>
+            <version>4.2.6.Final</version>
         </dependency>
 
         <dependency>
@@ -130,6 +131,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.openejb</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0-6</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>6.0</version>
@@ -142,10 +149,25 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.tomee</groupId>
+            <artifactId>tomee-embedded</artifactId>
+            <version>7.1.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+
+
+
     </dependencies>
 
     <build>
         <finalName>Library</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
@@ -157,14 +179,54 @@
                     <path>/</path>
                 </configuration>
             </plugin>
+<!--                          jar                 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
+            <!--            copy resources!!!               -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <!--            .jar to .war            -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.1.0</version>
+            </plugin>
+            <!--            run tomEE               -->
+            <plugin>
+                <groupId>org.apache.openejb.maven</groupId>
+                <artifactId>tomee-maven-plugin</artifactId>
+                <version>${tomee.version}</version>
+                <configuration>
+                    <context>tomeeapp</context>
+                    <tomeeVersion>${tomee.version}</tomeeVersion>
+                    <tomeeClassifier>plus</tomeeClassifier>
+                    <args>-Xmx512m -XX:PermSize=256m</args>
+<!--                    <libs>-->
+<!--                        <lib>hibernate-core-5.3.5.Final.jar</lib>-->
+<!--                        <lib>hibernate-entitymanager-5.3.5.Final.jar</lib>-->
+<!--                    </libs>-->
+                    <libs>
+                        <lib>remove:javaee-api</lib>
+                        <lib>unzip:org.apache.openejb:javaee-api:6.0-5:zip</lib>
+                        <lib>remove:geronimo-jcdi_1.0_spec-1.0</lib>
+                        <lib>javax.enterprise:cdi-api:1.1</lib>
+                    </libs>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
